# Model3D-Loader

./: CMakeLists.txt  README.md
Model3DLoader/: AnimatedModel3D.hpp  Materials.hpp  Model3D.hpp  Programs.hpp  Shaders.hpp  Textures.hpp  Transform.hpp  WideUTF8Converter.hpp  Window.hpp  camera.hpp  main.cpp  time.hpp
Model3DLoader/glad/include/glad/: glad.h
Model3DLoader/glad/src/: glad.c
Model3DLoader/mdl/: fir_tree.mtl  fir_tree_advanced.mtl
Model3DLoader/mtl/: Knight.mtl  fir_tree.mtl  fir_tree_advanced.mtl  grass.mtl  oak_tree.mtl  rock.mtl  tree.mtl
license/: Model3D Loader.txt  stb_image.txt
